--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <h2>TwiCommunityDrawer<small> v1.0.1</small></h2>
+        <h2>TwiCommunityDrawer<small> <a href="history.txt">v1.0.2</a></small></h2>
         <div id="container">
             <div id="button-container">
                 <div class="cnt-cell"> 
-                    <h3>twitter</h3>
-                    @<input type="text" id="twitterID" /><button id="twitterGet">取得</button><br />
-                    <input type="range" class="brushBtn" brush="stamp" id="stamp-size" min="24" max="256" value="96"><br />
+                    <h3>image</h3>
+                    twi:@<input type="text" id="twitterID" /><button id="twitterGet">取得</button><br />
+                    <input type="file" id="uploadImg" /><br />
+                    <input type="range" class="brushBtn" brush="stamp" id="stamp-size" min="24" max="1920" value="96"><br />
                     <button id="stamp" class="brushBtn" brush="stamp"><img id="twitterStamp" src="img/TwitterLogo.png" /></button>
                 </div>
+
                 <div class="cnt-cell">
                     <h3>line</h3>
                     <input type="range" id="line-size" min="1" max="64" value="6"><br />
