--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <h2>TwiCommunityDrawer<small> <a href="history.txt">v1.0.3</a></small></h2>
+        <h2>TwiCommunityDrawer<small> <a href="history.txt">v1.0.3.1</a></small>
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://m77.pw/twidraw/">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></h2>
         <div id="container">
             <div id="button-container">
                 <div class="cnt-cell"> 
@@ -51,9 +53,7 @@
                     W:<input type="range" id="canvas-width" class="canvas-size" min="480" max="1920" value="640"><br />
                     H:<input type="range" id="canvas-height" class="canvas-size" min="480" max="1920" value="640"><br />
                     <button id="btnUndo">Undo(C-z)</button><br />
-                    <button id="download">Download</button><br />
-                    <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://m77.pw/twidraw/">Tweet</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+                    <button id="download">Download</button>
                 </div>
                 <div class="cnt-cell">
                     <h3>reset</h3>
