--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <h2>TwiCommunityDrawer<small> <a href="history.txt">v1.0.6</a></small>
+        <h2>TwiCommunityDrawer<small> <a href="history.txt">v1.0.6.1</a></small>
                     <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://m77.pw/twidraw/">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></h2>
         <div id="container">
@@ -50,10 +50,10 @@
                 </div>
                 <div class="cnt-cell">
                     <h3>edit</h3>
-                    W:<input type="range" id="canvas-width" class="canvas-size" min="480" max="1920" value="640"><br />
-                    H:<input type="range" id="canvas-height" class="canvas-size" min="480" max="1920" value="640"><br />
-                    <button id="btnUndo">Undo(C-z)</button><br />
-                    <button id="btnRedo">Redo(C-y)</button><br />
+                    W:<input type="range" id="canvas-width" class="canvas-size" min="240" max="1920" value="640"><br />
+                    H:<input type="range" id="canvas-height" class="canvas-size" min="240" max="1920" value="640"><br />
+                    <button id="btnUndo">Undo↩(C-z)</button><br />
+                    <button id="btnRedo">Redo↪(C-y)</button><br />
                     <button id="download">Download</button><br />
                 </div>
                 <div class="cnt-cell">
